Skeleton of results section

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -110,49 +110,43 @@ From this distribution, the current action (motor command $c_t$) can be sampled 
 \section{Experimental results}
 In this section, we go through a number of experimentally-observed phenomena and show how imperfect context inference, as done in our model, provides a parsimonious explanation for all of them.
 
-In what follows, we show numerical results obtained the model outlined above. The full mathematical implementation of the model can be found in XXX.
+In what follows, we show numerical results obtained the model outlined above. The full mathematical implementation of the model can be found in \sref{subsection:model-description}.
 
-Before discussing these phenomena, let us introduce terminology. As an example, we will use a typical motor adaptation task in which participants have to make forward-backward reaching movements while holding the handle of a mechanical arm that exerts a force. Depending on the trial (and experiment), the arm might exert a curl force in a clockwise or counter-clockwise direction, or no force at all. Let us define the baseline context O as that in which the mechanical arm exerts no force. Context A can be defined as that in which the arm exerts the clockwise curl force and context B counter-clockwise. Additionally, abusing notation, it can be said that $B = (-A)$, as the forces point (approximately) in opposite directions. We represent contexts such as A and A/2, which means that both have the same direction of the adaptation (e.g. clockwise), but the second one has half the magnitude. Finally, we represent error-clamp trials with the letter E.
+Before discussing these phenomena, let us introduce terminology. As an example, we will use a typical motor adaptation task in which participants have to make forward-backward reaching movements while holding the handle of a mechanical arm that exerts a force. Depending on the trial (and experiment), the arm might exert a curl force in a clockwise or counter-clockwise direction, or no force at all. Let us define the baseline context O as that in which the mechanical arm exerts no force. Context A can be defined as that in which the arm exerts the clockwise curl force and context B counter-clockwise. Additionally, abusing notation, it can be said that $B = (-A)$, as the forces point (approximately) in opposite directions. We represent contexts such as A and A/2, which means that both have the same direction of the adaptation (e.g. clockwise), but the second one has half the magnitude. Finally, we represent error-clamp trials with the letter E and washout trials with W.
 
-With this terminology, a typical experiment [EG] would have a block structure of O-A-B-E (or O-A-(-A)-E), which means that the participant goes through a block of trials with no external force applied (O), a number of trials with a clockwise curl force (A), a block with counter-clockwise forces, and finally a block with error-clamp trials.
+With this terminology, a typical experiment [EGs] would have a block structure of O-A-B-E (or O-A-(-A)-E), which means that the participant goes through a block of trials with no external force applied (O), a number of trials with a clockwise curl force (A), a block with counter-clockwise forces (B), and finally a block with error-clamp trials (E).
 
 \subsection{Savings and quick de-adaptation}
-Savings refers to the ability of humans and other animals to remember a previously-learned adaptation, and apply it without having to re-learn it. Savings is almost-universally observed in human participants [A THOUSAND CITATIONS; c.f. that one paper with single-internal-model], but animal experiments have shown mixed results \citep[e.g.][]{Kojima_Memory_2004}.
-
-In an O-A-O-A experiment, for example, savings would be seen in the second A block in the form of an apparent adaptation rate might higher than that observed during the first A block.
+Savings refers to the ability of humans and other animals to remember a previously-learned adaptation and apply it without having to re-learn it. Savings is almost universally observed in human participants [A THOUSAND CITATIONS, c.f. papers with volatility or ramping up/down], but animal experiments have shown mixed results \citep[e.g.][]{Kojima_Memory_2004}. In an O-A-O-A experiment, for example, savings would be seen in the second A block in the form of an adaptation rate apparently higher than that observed during the first A block.
 
 On the other hand, quick de-adaptation refers to the observation that in an O-A-O paradigm, the adaptation from O to A is much slower than that from A back to O.
 
-Importantly, neither savings nor quick de-adaptation are immediate, but instead manifest as a much increased adaptation speed. In this section, we will show that both phenomena are the two sides of a coin, and the speed at which this quick adaptation/de-adaptation happens is related to the availability and reliability of contextual cues, as well as to the quality of the prediction errors.
+In this section, we will show that both phenomena are the two sides of a coin, and the speed at which this quick adaptation/de-adaptation happens, which is known not to be immediate [Citations] is related to the availability and reliability of contextual information, as well as to the quality of the prediction errors.
 
-We can categorize experiments performed with human participants by looking at the amount of contextual information that is available. In some experiments [EGssss], the context is clearly \todo{Maybe not use the word 'cue', as many experiments don't have explicit sensory cues}cued to the participant, either in the form of visual cues on in changes to the location of the task. We call these cued-context experiments. In other experiments, partial information is available to participants [EGsss]; we refer to these as partially-cued experiments. While there are no experiments in which no contextual information is available, there are some experiments which contain blocks in which this is the case and participants have no way of inferring the current context. Abusing our notation, we call these experiments (or rather, these sections of the experiments) uncued experiments. In this section, we focus on the two former categories, while the latter is left for the next sections.
+To show this, we categorized experiments performed with human participants by looking at the amount of contextual information that is available. In some experiments [EGssss], the context is clearly \todo{Maybe not use the word 'cue', as many experiments don't have explicit sensory cues}cued to the participant, e.g. in the form of visual cues [EGs] or in changes to the location of the task [EGs]. We call these cued-context experiments. In other experiments, partial information is available to participants [EGsss]; we refer to these as partially-cued experiments. While there are no experiments in which no contextual information is available, there are some experiments which contain blocks of trials in which no contextual information is available and participants have no way of inferring the current context. Abusing our notation, we call these experiments (or rather, these sections of the experiments) uncued experiments. In this section, we focus on the two former categories, while the latter is left for the next sections.
 
-Note that, because context inference integrates information from many sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. Additionally, the sudden appearance of large motor errors can itself be a cue for contextual change.
+Note that, because context inference integrates information from many sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. Proprioceptive signals can also provide contextual information [EGs of experiments with hidden hands]. The sudden appearance of motor errors can itself be a cue for contextual change, as long as the motor error is perceivably higher than normal trial-by-trial variation in performance.
 
-To see the effects of context inference on savings and quick de-adaptation, we contrast the two former types of experiments.
+In FIGURE XXX, we show data from representative experiments from the cued-context \citep{Kim_Neural_2015} and partially-cued \citep[][group 1c]{Oh_Minimizing_2019} categories are shown. \cite{Kim_Neural_2015} used a colored light as a visual cue at the beginning of each experiment, whereas \cite{Oh_Minimizing_2019} included a condition in which the necessary adaptation was in the order of the motor error, making feedback-based context inference slow. It can be seen that in cued-context experiments \cite[data from][]{Oh_Minimizing_2019}, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
 
-In FIGURE XXX, data from representative experiments from each category are shown. It can be seen that in cued-context experiments \cite[data from][]{Oh_Minimizing_2019}, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
-
-In FIGURE XXX, we show the same effects described above, but in the frame of quick de-adaptation. The explanation for these effects given by the model is the same for savings and quick de-adaptation, namely that the participant slowly accumulates evidence in favor of a switch in context.
+Note that in the data from \cite{Oh_Minimizing_2019} and \cite{Kim_Neural_2015} include both savings (O-A transitions) and de-adaptation (A-O transitions), both of which display the same characteristics and are explained by the same mechanism in our model. \todo{Need to be careful here, as de-adaptation is sometimes discussed only in terms of experiments with no contextual cues or where the meaning of the cues is inverted}.
 
 
 \section{The effects on the rate of adaptation}
-In our model, adaptation is gated by the uncertainty on the current context (see Methods). More specifically, a prediction error observed at trial $t$ will effect motor adaptation with a magnitude proportional to the size of the error, where the proportionality constant is related to the uncertainty over the context in which the error was observed: the higher the uncertainty, the lower the size of the adaptation, given a fixed size of prediction error.
+In our model, adaptation is gated by the uncertainty on the current context. More specifically, a prediction error observed at trial $t$ will effect motor adaptation with a magnitude proportional to the size of the error, where the proportionality constant is related to the uncertainty over the context in which the error was observed: the higher the uncertainty, the lower the size of the adaptation, given a fixed size of prediction error.
 
 The most direct evidence for the effects of context inference on the rate of adaptation come from the experiments by \cite{Herzfeld_memory_2014}. The authors showed that the volatility of the environment, expressed in terms of unpredictable, stochastic transitions between O and A (and vice versa) change the speed at which adaptation occurs.
 
-\cite{Herzfeld_memory_2014} used an experimental paradigm in which the force that a mechanical arm exerts on the participant's hand can change from trial to trial between two possibilities: no force (baseline O) and some force (context A). They divided participants into three groups for which the transition from one trial to the next were very uncommon, somewhat common and almost every trial. Importantly, these transitions were uncued, and the participant could only infer that a transition had occurred when a motor error is observed.
+\cite{Herzfeld_memory_2014} used an experimental paradigm in which the force that a mechanical arm exerts on the participant's hand can change from trial to trial between two possibilities: no force (baseline O) and some force (context A). They divided participants into three groups for which the transition from one trial to the next were very uncommon, somewhat common and almost every trial. Importantly, these transitions were uncued, and the participant could only infer that a transition had occurred after a motor error was observed.
 
-\cite{Herzfeld_memory_2014} found that the volatility of the environment affects learning. The more volatile the environment, the less participants can adapt their motor responses. In FIGURE XXX, we show results adapted from \cite{Herzfeld_memory_2014} alongside results obtained with our model. In our model, learning is gated by context inference: the higher the uncertainty on the context in which an error occured, the lower the effect of this error on future trials (i.e. adaptation).
+\cite{Herzfeld_memory_2014} found that the volatility of the environment affects learning. The more volatile the environment, the less participants adapt their motor responses. In FIGURE XXX, we show results adapted from \cite{Herzfeld_memory_2014} alongside results obtained with our model. In our model, learning is gated by context inference: the higher the uncertainty on the context in which an error occured, the lower the effect of this error on future trials (i.e. adaptation).
 
 To account for volatility, the model includes a term in context inference which assumes a transition from the previous context to all other possible contexts (see Methods). Effectively, this transition term gives the model uncertainty on the current context, regardless of observations. The higher the volatility, the higher the uncertainty.
-
-While we focused on \cite{Herzfeld_memory_2014}, evidence for this can be seen in other studies, which we discuss in the Discussion section.
 
 \section{Action selection}
 As with learning, our model selects actions (motor commands) based on context inference. If the identity of the current context is known, the forward model for this context is used to select the current action. However, if some uncertainty exists, the selected action is influenced by all the possible current contexts, with a weight directly related to how likely each one of those contexts is.
 
-Experimental evidence supporting this view can be found in experiments with context switching. For example, \cite{Davidson_Scaling_2004} reported an experiment in which participants had to switch from 3A to A in one group, with a block sequence A-3A-A-3A, and from -A to A in another group (where -A refers to an adaptation in the opposite direction, but with the same magnitude), with a block sequence A-(-A)-A-(-A), keeping the size of the necessary adaptation equal across both groups. After A and 3A in one group, A and -A in the other, had been learned in the first two blocks, the authors found that the switch from 3A to A was faster than that from -A to A. The authors interpreted this as evidence that a new adaptation happens faster if it is in the same direction as the current adaptation (e.g. both counter-clockwise), and slower if they are in the opposite direction (e.g. clockwise to counter-clockwise).
+Experimental evidence supporting this view can be found in experiments with context switching. For example, \cite{Davidson_Scaling_2004} reported an experiment in which participants had to switch from 3A to A in one group, with a block sequence A-3A-A-3A, and from -A to A in another group (where -A refers to an adaptation in the opposite direction as A, but with the same magnitude), with a block sequence A-(-A)-A-(-A), keeping the size of the necessary adaptation equal across both groups. After A and 3A in one group, A and -A in the other, had been learned in the first two blocks, the authors found that the switch from 3A to A was faster than that from -A to A. The authors interpreted this as evidence that a new adaptation happens more quickly if it is in the same direction as the current adaptation (e.g. both counter-clockwise), and more slowly if they are in the opposite direction (e.g. clockwise to counter-clockwise).
 
 Our model offers a different explanation for the observed results: the assymetry is due to the existance of the baseline context. As discussed above, action selection in our model is done via a weighted avarage:
 \begin{equation}
@@ -183,8 +177,13 @@ During these error-clamp trials, the natural variability of movements leads to p
 We further discuss error-clamp trials in the Discussion section.
 
 
+\section{Discussion}
+This is where the brunt of the paper will be.
+
+
 \section{Methods}
 \subsection{Model description}
+\label{subsection:model-description}
 We first describe the general principle behind the model, followed, in the next
 subsection, by the full mathematical description of each one of its components.
 
