Update on Overleaf.

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -85,7 +85,7 @@ In this account of motor adaptation, the prediction error signal takes the form 
 Not only is the internal model for everyday movements not fixed (i.e. adaptation is possible), it is also not unique. Multiple internal models are used and updated, depending on the task at hand. For example, a person might have an internal model for baseline reaching movements (e.g. with empty hands) $f_B$, and a different one for reaching movements while holding a heavy object, $f_H$. A key aspect of motor adaptation is to select the relevant model to update, should a prediction error arise.
 
 \subsection{Context inference}
-In our model, the idea of context is quite general. The context comprises the relevant elements of hte environment (e.g. high winds when walking), as well as the task at hand. Previous models have focused on the elements of the context which are directly related to the internal models: given a past action, the different internal models (e.g. $f_B$ and $f_H$ from the previous section) make different predictions for the outcome of that action; the model that best predicts that action is deemed to be the ``correct'' model, i.e. the model that best represents the context.
+In our model, the idea of context is quite general. The context comprises the relevant elements of the environment (e.g. high winds when walking), as well as the task at hand. Previous models have focused on the elements of the context which are directly related to the internal models: given a past action, the different internal models (e.g. $f_B$ and $f_H$ from the previous section) make different predictions for the outcome of that action; the model that best predicts that action is deemed to be the ``correct'' model, i.e. the model that best represents the context.
 
 In this work, we focus on the idea that the context can be inferred by integrating several sources of information, an idea with great intuitive appeal. Through this idea, we explain many previously-unexplained phenomena from different experiments with humans.
 
@@ -95,7 +95,7 @@ q(\zeta | \vartheta_t, \vartheta_{t-1}, c_{t-1}) \propto p(\vartheta_t | \varthe
 \end{equation}
 where the prior distribution over contexts $p(\zeta)$ includes information from two sources: (1) an expectation of continuity, encoding the expectation that the context does not change from instant to instant, and (2) an overall estimation of observing any one context, if the context did change. Below, we discuss how these two components effect different experimentally observed phenomena.
 
-In the previous section, we used the variable $\vartheta$ to refer to the outcomes of actions. In this section, we expand the definition of an observation $\vartheta$ to include any information given to the decision-making agent by the environment. This includes, as before, the outcomes of actions, but also any other sensory information that might be indirectly related to actions, or even completely intependent from them. For this section, the most important component of $\vartheta$ is contextual information, i.e. information that might directly help infer the identity of the current context.
+In the previous section, we used the variable $\vartheta$ to refer to the outcomes of actions. In this section, we expand the definition of an observation $\vartheta$ to include any information given to the decision-making agent by the environment. This includes, as before, the outcomes of actions, but also any other sensory information that might be indirectly related to actions, or even completely independent from them. For this section, the most important component of $\vartheta$ is contextual information, i.e. information that might directly help infer the identity of the current context.
 
 In experimental settings, the contextual information can take the form of a visual cue [EGS], the place where the task must be carried out [EGS] or even the start of a new block of trials [EGS]. All these sources of information, alongside the outcomes of previous actions and the priors $p(\vartheta$ form part of $p(\vartheta_t | \vartheta_{t-1
 }, c_{t-1})$ and are integrated together to identify a context.
@@ -125,7 +125,7 @@ In this section, we will show that both phenomena are the two sides of a coin, a
 
 To show this, we categorized experiments performed with human participants by looking at the amount of contextual information that is available. In some experiments [EGssss], the context is clearly \todo{Maybe not use the word 'cue', as many experiments don't have explicit sensory cues}cued to the participant, e.g. in the form of visual cues [EGs] or in changes to the location of the task [EGs]. We call these cued-context experiments. In other experiments, partial information is available to participants [EGsss]; we refer to these as partially-cued experiments. While there are no experiments in which no contextual information is available, there are some experiments which contain blocks of trials in which no contextual information is available and participants have no way of inferring the current context. Abusing our notation, we call these experiments (or rather, these sections of the experiments) uncued experiments. In this section, we focus on the two former categories, while the latter is left for the next sections.
 
-Note that, because context inference integrates information from many sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. Proprioceptive signals can also provide contextual information [EGs of experiments with hidden hands]. The sudden appearance of motor errors can itself be a cue for contextual change, as long as the motor error is perceivably higher than normal trial-by-trial variation in performance.
+Note that because context inference integrates information from many sources, many experiments in which no intentional, overt contextual cues are available indeed contain contextual information that the participant can use. For example, in curl-force-field experiments with mechanical arms, the force feedback provided by the mechanical arm always gives participants a sense for the current context, although error-clamp trials are difficult to distinguish from adaptation trials based on force feedback alone. Proprioceptive signals can also provide contextual information [EGs of experiments with hidden hands]. The sudden appearance of motor errors can itself be a cue for contextual change, as long as the motor error is perceivably higher than normal trial-by-trial variation in performance.
 
 In FIGURE XXX, we show data from representative experiments from the cued-context \citep{Kim_Neural_2015} and partially-cued \citep[][group 1c]{Oh_Minimizing_2019} categories are shown. \cite{Kim_Neural_2015} used a colored light as a visual cue at the beginning of each experiment, whereas \cite{Oh_Minimizing_2019} included a condition in which the necessary adaptation was in the order of the motor error, making feedback-based context inference slow. It can be seen that in cued-context experiments \cite[data from][]{Oh_Minimizing_2019}, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
 
@@ -148,7 +148,7 @@ As with learning, our model selects actions (motor commands) based on context in
 
 Experimental evidence supporting this view can be found in experiments with context switching. For example, \cite{Davidson_Scaling_2004} reported an experiment in which participants had to switch from 3A to A in one group, with a block sequence A-3A-A-3A, and from -A to A in another group (where -A refers to an adaptation in the opposite direction as A, but with the same magnitude), with a block sequence A-(-A)-A-(-A), keeping the size of the necessary adaptation equal across both groups. After A and 3A in one group, A and -A in the other, had been learned in the first two blocks, the authors found that the switch from 3A to A was faster than that from -A to A. The authors interpreted this as evidence that a new adaptation happens more quickly if it is in the same direction as the current adaptation (e.g. both counter-clockwise), and more slowly if they are in the opposite direction (e.g. clockwise to counter-clockwise).
 
-Our model offers a different explanation for the observed results: the assymetry is due to the existance of the baseline context. As discussed above, action selection in our model is done via a weighted avarage:
+Our model offers a different explanation for the observed results: the asymmetry is due to the existence of the baseline context. As discussed above, action selection in our model is done via a weighted average:
 \begin{equation}
 p(a_t | s_t) \propto \displaystyle \sum_{m \in M} p(m | s_t, s_{t-1}, a_{t-1}) p(a_t | m)
 \end{equation}
