All results are ready, except error clamp trials

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -353,6 +353,27 @@
   keywords = {Neural network,Olfaction,Small-world}
 }
 
+@article{Baddeley_System_2003,
+  title = {System {{Identification Applied}} to a {{Visuomotor Task}}: {{Near}}-{{Optimal Human Performance}} in a {{Noisy Changing Task}}},
+  shorttitle = {System {{Identification Applied}} to a {{Visuomotor Task}}},
+  author = {Baddeley, R. J. and Ingram, H. A. and Miall, R. C.},
+  year = {2003},
+  month = apr,
+  volume = {23},
+  pages = {3066--3075},
+  publisher = {{Society for Neuroscience}},
+  issn = {0270-6474, 1529-2401},
+  doi = {10.1523/JNEUROSCI.23-07-03066.2003},
+  abstract = {Sensory-motor integration has frequently been studied using a single-step change in a control variable such as prismatic lens angle and has revealed human visuomotor adaptation to often be partial and inefficient. We propose that the changes occurring in everyday life are better represented as the accumulation of many smaller perturbations contaminated by measurement noise. We have therefore tested human performance to random walk variations in the visual feedback of hand movements during a pointing task. Subjects made discrete targeted pointing movements to a visual target and received terminal feedback via a cursor the position of which was offset from the actual movement endpoint by a random walk element and a random observation element. By applying ideal observer analysis, which for this task compares human performance against that of a Kalman filter, we show that the subjects' performance was highly efficient with Fisher efficiencies reaching 73\%. We then used system identification techniques to characterize the control strategy used. A ``modified'' delta-rule algorithm best modeled the human data, which suggests that they estimated the random walk perturbation of feedback in this task using an exponential weighting of recent errors. The time constant of the exponential weighting of the best-fitting model varied with the rate of random walk drift. Because human efficiency levels were high and did not vary greatly across three levels of observation noise, these results suggest that the algorithm the subjects used exponentially weighted recent errors with a weighting that varied with the level of drift in the task to maintain efficient performance.},
+  chapter = {ARTICLE},
+  copyright = {Copyright \textcopyright{} 2003 Society for Neuroscience},
+  journal = {Journal of Neuroscience},
+  keywords = {human,ideal observer analysis,movement,performance,system identification,visuomotor control},
+  language = {en},
+  number = {7},
+  pmid = {12684493}
+}
+
 @article{Baene_Brain_2015,
   title = {Brain {{Circuit}} for {{Cognitive Control Is Shared}} by {{Task}} and {{Language Switching}}},
   author = {Baene, Wouter De and Duyck, Wouter and Brass, Marcel and Carreiras, Manuel},
@@ -1481,6 +1502,24 @@
   journal = {Nature Reviews Neuroscience},
   language = {en},
   number = {2}
+}
+
+@article{Burge_statistical_2008,
+  title = {The Statistical Determinants of Adaptation Rate in Human Reaching},
+  author = {Burge, Johannes and Ernst, Marc O. and Banks, Martin S.},
+  year = {2008},
+  month = apr,
+  volume = {8},
+  pages = {20.1-19},
+  issn = {1534-7362},
+  doi = {10.1167/8.4.20},
+  abstract = {Rapid reaching to a target is generally accurate but also contains random and systematic error. Random errors result from noise in visual measurement, motor planning, and reach execution. Systematic error results from systematic changes in the mapping between the visual estimate of target location and the motor command necessary to reach the target (e.g., new spectacles, muscular fatigue). Humans maintain accurate reaching by recalibrating the visuomotor system, but no widely accepted computational model of the process exists. Given certain boundary conditions, a statistically optimal solution is a Kalman filter. We compared human to Kalman filter behavior to determine how humans take into account the statistical properties of errors and the reliability with which those errors can be measured. For most conditions, human and Kalman filter behavior was similar: Increasing measurement uncertainty caused similar decreases in recalibration rate; directionally asymmetric uncertainty caused different rates in different directions; more variation in systematic error increased recalibration rate. However, behavior differed in one respect: Inserting random error by perturbing feedback position causes slower adaptation in Kalman filters but had no effect in humans. This difference may be due to how biological systems remain responsive to changes in environmental statistics. We discuss the implications of this work.},
+  journal = {Journal of Vision},
+  keywords = {Adaptation; Ocular,Adaptation; Physiological,Cues,Humans,Models; Statistical,Psychomotor Performance,Visual Perception},
+  language = {eng},
+  number = {4},
+  pmcid = {PMC2684526},
+  pmid = {18484859}
 }
 
 @book{Burnham_Model_2002,
@@ -4032,6 +4071,21 @@
   year = {2007},
   abstract = {The study of decision making spans such varied fields as neuro- science, psychology, economics, statistics, political science, and com- puter science. Despite this diversity of applications, most decisions share common elements including deliberation and commitment. Here we evaluate recent progress in understanding how these basic elements of decision formation are implemented in the brain. We focus on simple decisions that can be studied in the laboratory but emphasize general principles likely to extend to other settings.},
   keywords = {Decision making,review}
+}
+
+@article{GonzalezCastro_Environmental_2014,
+  title = {Environmental {{Consistency Determines}} the {{Rate}} of {{Motor Adaptation}}},
+  author = {Gonzalez Castro, Luis Nicolas and Hadjiosif, Alkis M. and Hemphill, Matthew A. and Smith, Maurice A.},
+  year = {2014},
+  month = may,
+  volume = {24},
+  pages = {1050--1061},
+  issn = {0960-9822},
+  doi = {10.1016/j.cub.2014.03.049},
+  abstract = {Background The motor system has the remarkable ability not only to learn but also to learn how fast it should learn. However, the mechanisms behind this ability are not well understood. Previous studies have posited that the rate of adaptation in a given environment is determined by Bayesian sensorimotor integration based on the amount of variability in the state of the environment. However, experimental results have failed to support several predictions of this theory. Results We show that the rate at which the motor system adapts to changes in the environment is primarily determined not by the degree to which environmental change occurs but by the degree to which the changes that do occur persist from one movement to the next, i.e., the consistency of the environment. We demonstrate a striking double dissociation whereby feedback response strength is predicted by environmental variability rather than consistency, whereas adaptation rate is predicted by environmental consistency rather than variability. We proceed to elucidate the role of stimulus repetition in speeding up adaptation and find that repetition can greatly potentiate the effect of consistency, although unlike consistency, repetition alone does not increase adaptation rate. By leveraging this understanding, we demonstrate that the rate of motor adaptation can be modulated over a range that encompasses a 20-fold increase from lowest to highest. Conclusions Understanding the mechanisms that determine the rate of motor adaptation could lead to the principled design of improved procedures for motor training and rehabilitation. Regimens designed to control environmental consistency and repetition during training might yield faster, more robust motor learning.},
+  journal = {Current Biology},
+  language = {en},
+  number = {10}
 }
 
 @article{Goschke_Dysfunctions_2014,
