--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -129,17 +129,32 @@ Note that, because context inference integrates information from many sources, m
 
 In FIGURE XXX, we show data from representative experiments from the cued-context \citep{Kim_Neural_2015} and partially-cued \citep[][group 1c]{Oh_Minimizing_2019} categories are shown. \cite{Kim_Neural_2015} used a colored light as a visual cue at the beginning of each experiment, whereas \cite{Oh_Minimizing_2019} included a condition in which the necessary adaptation was in the order of the motor error, making feedback-based context inference slow. It can be seen that in cued-context experiments \cite[data from][]{Oh_Minimizing_2019}, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
 
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{./figures/figure_1.png}
+\caption{Savings and de-adaptation. Data from our simulations (A and C) compared to data from \cite{Oh_Minimizing_2019} (B and D). In all panels, the blue line represents the adaptation displayed by the agent as a function of trial number. The black lines represent the optimal adaptation, i.e. the size of the visuomotor rotation during the task. (A) A simulated experiment in which the agent must adapt to a 20 degree visuomotor rotation during shooting movements. It can be seen that after context switches (e.g. at trial 120), the agent returns to the adaptation of the previous block, with one or two trials of delay. (B) Data adapted from \cite{Oh_Minimizing_2019}, figure 4a. The same immediate switch can be observed as that in A. (C) Simulated experiment with a 10 degree adaptation. In this case, savings are much slower. (D) Data adapted from \cite{Oh_Minimizing_2019}, figure 4a.} \label{fig:oh-2019}
+\end{figure}
+
 Note that in the data from \cite{Oh_Minimizing_2019} and \cite{Kim_Neural_2015} include both savings (O-A transitions) and de-adaptation (A-O transitions), both of which display the same characteristics and are explained by the same mechanism in our model. \todo{Need to be careful here, as de-adaptation is sometimes discussed only in terms of experiments with no contextual cues or where the meaning of the cues is inverted}.
 
 
 \section{The effects on the rate of adaptation}
 In our model, adaptation is gated by the uncertainty on the current context. More specifically, a prediction error observed at trial $t$ will effect motor adaptation with a magnitude proportional to the size of the error, where the proportionality constant is related to the uncertainty over the context in which the error was observed: the higher the uncertainty, the lower the size of the adaptation, given a fixed size of prediction error.
 
-The most direct evidence for the effects of context inference on the rate of adaptation come from the experiments by \cite{Herzfeld_memory_2014}. The authors showed that the volatility of the environment, expressed in terms of unpredictable, stochastic transitions between O and A (and vice versa) change the speed at which adaptation occurs.
+The most direct evidence for the effects of context inference on the rate of adaptation come from the experiments by \cite{Herzfeld_memory_2014}. The authors showed that the volatility of the environment, expressed in terms of unpredictable, stochastic transitions between A and -A (and vice versa) change the speed at which adaptation occurs.
 
-\cite{Herzfeld_memory_2014} used an experimental paradigm in which the force that a mechanical arm exerts on the participant's hand can change from trial to trial between two possibilities: no force (baseline O) and some force (context A). They divided participants into three groups for which the transition from one trial to the next were very uncommon, somewhat common and almost every trial. Importantly, these transitions were uncued, and the participant could only infer that a transition had occurred after a motor error was observed.
+\cite{Herzfeld_memory_2014} used an experimental paradigm in which the force that a mechanical arm exerts on the participant's hand can change from trial to trial between two possibilities: no force (baseline O) a clockwise force (context A) and a counter-clockwise force (context -A). They divided participants into three groups for which the transition from one trial to the next were very uncommon, somewhat common and almost every trial. Importantly, these transitions were uncued, and the participant could only infer that a transition had occurred after a motor error was observed.
 
-\cite{Herzfeld_memory_2014} found that the volatility of the environment affects learning. The more volatile the environment, the less participants adapt their motor responses. In FIGURE XXX, we show results adapted from \cite{Herzfeld_memory_2014} alongside results obtained with our model. In our model, learning is gated by context inference: the higher the uncertainty on the context in which an error occured, the lower the effect of this error on future trials (i.e. adaptation).
+\cite{Herzfeld_memory_2014} found that the volatility of the environment affects learning. The more volatile the environment, the less participants adapt their motor responses after observing an error. In \fref{fig:herzfeld-2014}, we show results obtained with our model in a paradigm matching that of \cite{Herzfeld_memory_2014}. We simulated the conditions of low volatility and maximum uncertainty ($z = 0.9$ and $z = 0.5$ in \cite{Herzfeld_memory_2014}) for thirty trials, repeating the experiment 300 times with random sequences of A and -A each time, following the transition probabilities from the experiment. In \fref{fig:herzfeld-2014}A we show the adaptation as a function of trial number, averaged across all 300 runs. It can be seen that the agent learns more slowly on the more volatile environment ($z = 0.5$) than on the less volatile one, matching the results from \cite{Herzfeld_memory_2014}. Additionally, \fref{fig:herzfeld-2014}B shows the sensitivity to errors, here defined as $\text{adaptation} / \text{error}$; the more volatile environment creates a lower sensitivity to errors than the predictable environment.
+
+\begin{figure}
+\centering
+\includegraphics{./figures/figure_2.png}
+\caption{Learning under unstable and unpredictable contexts. 30 trials were simulated in the task defined by \cite{Herzfeld_memory_2014}, repeated 300 times for better statistics. Two conditions were used, following the naming convention from \cite{Herzfeld_memory_2014}: $z=0.5$ is an unpredictable condition, where the context has a 0.5 probability of switching from trial to trial. $z=0.9$ is a stable condition, where the context has a 0.9 probability of staying the same from trial to trial. (A) Adaptation as a function of trial number, averaged across all runs. (B) Error sensitivity, binned into bins of 5 trials, averaged across all runs. The error is in arbitrary units, causing sensitivity to error (y axis) to also be in arbitrary units. Shaded areas are SEM.}
+\label{fig:herzfeld-2014}
+\end{figure}
+
+In our model, learning is gated by context inference: the higher the uncertainty on the context in which an error occured, the lower the effect of this error on future trials (i.e. adaptation).
 
 To account for volatility, the model includes a term in context inference which assumes a transition from the previous context to all other possible contexts (see Methods). Effectively, this transition term gives the model uncertainty on the current context, regardless of observations. The higher the volatility, the higher the uncertainty.
 
@@ -154,9 +169,16 @@ p(a_t | s_t) \propto \displaystyle \sum_{m \in M} p(m | s_t, s_{t-1}, a_{t-1}) p
 \end{equation}
 In experiments without cued contexts, the baseline model $m_O$ has a non-zero probability $p(m | s_t ...)$. When a new block of trials starts (e.g. in the transition from 3A to A), a switch is inferred by the model (given feedback after the first trial) and $m_O$ becomes more likely (given that $m_{3A}$ has been ruled out. Therefore, in these first trials, action selection has a component guided by the baseline model, in which no extra compensatory force is applied, essentially ``pulling'' adaptation towards zero (no compensatory force). In the first group, this initial pull towards zero accelerates the transition towards A, as $3A > A > 0$, but on the second group, it slows down the switch because $A > 0 > -A$.
 
-We simulated data with our model fitting the experimental structure by \cite{Davidson_Scaling_2004}. We show the results in FIGURE XXX, alongside the experimental results from \cite{Davidson_Scaling_2004}. It can be seen that the model provides a good qualitative fit to the data.
+We simulated data with our model fitting the experimental structure by \cite{Davidson_Scaling_2004}. We show the results in \fref{fig:davidson-2004}, alongside the experimental results from \cite{Davidson_Scaling_2004}. It can be seen that the agent exposed to the -8 context shifts back to 4 more slowly than the one exposed to +8, qualitatively reproducing the data from \cite{Davidson_Scaling_2004}, shown in \fref{fig:davidson-2004}B.
 
-The model additionally predicts that the difference in observed switching speed between 3A-A and (-A)-A would disappear in an experiment in which the adaptations do not cross the baseline, i.e. all are positive or all are negative, or in an experiments in which the contexts are clearly cued.
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{./figures/figure_3.png}
+\caption{Motor error when switching back to a previously learned adaptation. Following the block structure from \cite{Davidson_Scaling_2004}, the first 40 trials of the switch from +8 (yellow) or -8 (blue) to 4 is shown. (A) Simulations from our model, with the task parameters from \cite{Davidson_Scaling_2004}. On the y axis, the error is shown in arbitrary units, related to centimiters through a monotonically increasing transformation with the same origin. (B) Data adapted from \cite{Davidson_Scaling_2004}, showing the error in the same trials as (A).}
+\label{fig:davidson-2004}
+\end{figure}
+
+The model additionally predicts that the difference in observed switching speed between 3A-A and (-A)-A would disappear in an experiment in which the adaptations do not cross the baseline, i.e. all are positive or all are negative, or in an experiments in which the contexts are clearly cued. \todo{Maybe add simulations that show this, as well as simulations where the baseline context is not present.}
 
 Further evidence can be found during error-clamp blocks in several experiments. We discuss these experiments in the following section. Additionally, we discuss experiments similar to that by \cite{Davidson_Scaling_2004} in the Discussion section.
 
@@ -168,18 +190,23 @@ In this section, we show how our model can explain these different parameters of
 
 \cite{Vaswani_Decay_2013} explored in detail human behavior during an error-clamp block in a shooting movement paradigm with a mechanical arm. The authors found that during an E block at the end of each experiment, there was a lag of a few trials (depending on participant) before their motor behavior changed from that of the previous trial. After that, the exerted force slowly dropped towards zero throughout tens of trials, but never reaching values around zero. Participants were divided into four groups, each of which going through a different block sequence: (1) A-E, (2) O-A-E, (3) (-A/2)-A-E, and (4) (-A)-E. No pauses were made during the experiment nor were there any contextual cues, so transitions between blocks were not signaled to participants. However, the mechanical arm used in the experiment provided force-feedback to participants.
 
-In FIGURE XXX, we show the data from \cite{Vaswani_Decay_2013}, where it can be seen that the responses during the E block trials starts to drop towards zero-compensation. Importantly, the observed movements of the groups display the same behavior as that discussed in the previous subsection: The group that only trained in A has the slowest drop towards zero, followed by the group that trained in O-A and finally the group that trained in (-A/2)-A. As before, the existance and training on the baseline context pulls the average adaptation towards zero during the E block, and the existance and training on the (-A/2) block in group 2 pulls the average adaptation even lower (as the adaptation is negative). Finally, group 4, who only saw a negative-adaptation block (-A) has an average adaptation that is negative. We show the simulations with our model in FIGURE XXX, which displays the same behavior as that in the data.
+In \fref{fig:vaswani-2013}A-E, we show the data simulated with our model for the task presented by \cite{Vaswani_Decay_2013}. The motor adaptation periods can be observed in \fref{fig:vaswani-2013}A-D for the four groups in the experiment, while on each bottom panel the inference over context is shown. Context inference works reliably until the error-clamp trials start, which do not correspond to any of the known contexts. This causes the agent to infer the combination of some of the known contexts that best fits the observations. Depending on the contexts learned by the agent (which change from group to group), inference during E trials will vary: groups 1.1 and 1.3 have exactly the same behavior, where the previous context (A and -A, respectively) slowly dwindles. These agents will slowly lower the force applied until eventually reaching zero (after hundreds of trials; not shown). In contrast, group 1.3 has the additional -A/2 context (represented by brown in \fref{fig:vaswani-2013}C, which has a non-zero posterior probility during E trials, pushing the agent's adaptation force more quickly towards zero. Group 1.2 behaves similarly to 1.1, with the exception that the baseline context, which was recently seen, plays a bigger role during E trials, making the agent reduce its force during E trials slightly more slowly than groups 1.1 and 1.4.
 
-As can be seen in FIGURE XXX, our model also reproduces the lag before the tapering off in the E block starts. In the model, this lag is due to a period in which context inference has not ``caught on'' to the change of context; during this period, behavior remains consistent with that of the previously-observed block, as can be seen in the experimental data as well.
+In \fref{fig:vaswani-2013}E, the same data is shown but only in the E trials. Here, the difference in the speed in which the force decays for the different groups is more readily visible. This is a strong qualitative match to the data from \cite{Vaswani_Decay_2013}, shown in \fref{fig:vaswani-2013}F.
 
-During these error-clamp trials, the natural variability of movements leads to prediction error: during a normal (e.g. A) block, if the participant exerts less force than necessary by mistake, she observes a motor error which, if the adaptation is complete, produces no prediction error. However, in E trials, no error is observed, which leads to prediction error. It is this prediction error that lets the participant know that a transition has occurred. \cite{Vaswani_Decay_2013} performed an additional experiment in which they masked this lack of error by introducing artificial variability on the end position of the hand that mimicked that seen in the participant. Because this eliminated the only source of information regarding a switch of context, participants could no longer infer a switch. Consistent with our model, the authors found that no tapering off occured during the E block (see FIGURE XXX).
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{./figures/figure_4.png}
+\caption{Adaptation during error clamp trials. (A) On top, adaptation index shown by the agent belonging to group 1.1 at every trial, i.e. how much the agent adapted to the force that was present, where 1 is optimal adaptation. On bottom, inference over the current context, where contexts are color coded: black for baseline, orange for counter-clockwise force, purple for clockwise force and brown for clockwise force with half strenght. The lines represent the posterior probability of each ocontext at every trial, while the background color represents the real context. An olive-colored background represents error-clamp trials. (B) Same as A, for group 1.2. (C) Same as A, for group 1.3. (D) Same as A, for group 1.4. (E) Simulated data for all groups (same color coding as A-D), only during error-clamp trials. Perceptual noise (i.e. how well the agent can estimate the position of its own hand) was lowered to increase the clarity of the plotted lines; however, increasing it does not change the results. (F) Data adapted from Vaswani et al. 2013, figure 2C, depicting the data equivalent to (E).}
+\label{fig:vaswani-2013}
+\end{figure}
 
-We further discuss error-clamp trials in the Discussion section.
-
+As can be seen in FIGURE XXX, our model also reproduces the lag before the tapering off in the E block starts. In the model, this lag is due to a period in which context inference has not ``caught on'' to the change of context; during this period, behavior remains consistent with that of the previously-observed block, as can be seen in the experimental data as well. \todo{Simulate the lag? May be worth it}
 
 \section{Discussion}
-This is where the brunt of the paper will be.
+Discuss that our model does not fully match vaswani in how it all decays. This is because our model does not have a mechanism to create new internal models.
 
+During these error-clamp trials, the natural variability of movements leads to prediction error: during a normal (e.g. A) block, if the participant exerts less force than necessary by mistake, she observes a motor error which, if the adaptation is complete, produces no prediction error. However, in E trials, no error is observed, which leads to a predicted error that is not observed. It is this prediction error that lets the participant know that a transition has occurred. \cite{Vaswani_Decay_2013} performed an additional experiment in which they masked this lack of error by introducing artificial variability on the end position of the hand that mimicked that seen in the participant. Because this eliminated the only source of information regarding a switch of context, participants could no longer infer a switch. Consistent with our model, the authors found that no tapering off occured during the E block. \todo{Moved from Results}
 
 \section{Methods}
 \subsection{Model description}
